--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
 
   "builds": [
     {
-      "src": "src/main.ts",
+      "src": "main.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/main.ts",
+      "dest": "main.ts",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
     }
   ]
